tests/ui/nll/polonius/nll-problem-case-3-issue-124070.nll.stderr
error[E0502]: cannot borrow `self.field` as immutable because it is also borrowed as mutable
  --> $DIR/nll-problem-case-3-issue-124070.rs:28:16
   |
LL |     fn f(&mut self) -> &str {
   |          - let's call the lifetime of this reference `'1`
LL |         let a = &mut self.field;
   |                 --------------- mutable borrow occurs here
...
LL |             return a;
   |                    - returning this value requires that `self.field` is borrowed for `'1`
...
LL |         return &self.field;
   |                ^^^^^^^^^^^ immutable borrow occurs here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
